--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo y Hoteles</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
-            background-color: #f4f4f4;
+            background: linear-gradient(to bottom, #f8f9fa, #e9ecef);
             margin: 0;
             padding: 0;
         }
         h1 {
-            color: #333;
+            color: #2c3e50;
             position: relative;
             z-index: 2;
-            background: rgba(255, 255, 255, 0.7);
-            padding: 10px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 15px;
+            font-weight: 600;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            display: inline-block;
+            margin-top: 20px;
         }
         .main-image {
             width: 100%;
@@ -31,17 +37,62 @@
         }
         .tabs {
             display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+            margin-top: 40px;
+            padding: 0 20px;
         }
         .tab-button {
-            padding: 10px 20px;
-            background-color: #007BFF;
+            padding: 12px 25px;
+            background-color: #2c3e50;
             color: white;
             border: none;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 8px;
+            width: 90%; /* Ajuste para dispositivos móviles */
+            max-width: 220px;
+            font-size: 16px;
+            font-weight: 400;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .tab-button:hover {
+            background-color: #1a252f;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 20px;
+                padding: 10px;
+            }
+            .main-image {
+                height: auto;
+                max-height: 50vh;
+            }
+            .tabs {
+                margin-top: 20px;
+            }
+            .tab-button {
+                font-size: 14px;
+                padding: 10px 20px;
+            }
+        }
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 18px;
+                padding: 8px;
+            }
+            .main-image {
+                height: auto;
+                max-height: 40vh;
+            }
+            .tab-button {
+                font-size: 13px;
+                padding: 8px 18px;
+                width: 95%;
+            }
         }
     </style>
     <script>
